--- a/customerFrontend.html
+++ b/customerFrontend.html
@@ -11,7 +11,7 @@
     <h1>Welcome to Tim's Produce Shop</h1>
     <form onsubmit="validInput()" action="customerBackend.php" method="get">
       Username<input type="email" name="username"><br>
-      Password<input type="text" id="password"><br><br>
+      Password<input type="text" name="password" id="password"><br><br>
       Pick your produce<br>
       <input type="number" name="item1" min= "0">Bananas ($3.00 bunch)<br>
       <input type="number" name="item2" min= "0">Apples ($2.00 per apple)<br>
