--- a/customerFrontend.html
+++ b/customerFrontend.html
@@ -17,9 +17,9 @@
       <input type="number" name="item2" min= "0">Apples ($2.00 per apple)<br>
       <input type="number" name="item3" min= "0">Oranges ($1.00 per orange)<br><br>
       Pick Shipping<br>
-      <input type="radio" name="shipping" id="hello" value="0">Free 7 day<br>
-      <input type="radio" name="shipping" id= "hello" value="50">$50.00 over night<br>
-      <input type="radio" name="shipping" id = "hello" value="5">$5.00 three day<br><br>
+      <input type="radio" name="shipping" id="hello" value=0>Free 7 day<br>
+      <input type="radio" name="shipping" id= "hello" value=50>$50.00 over night<br>
+      <input type="radio" name="shipping" id = "hello" value=5>$5.00 three day<br><br>
       <input type="reset">
       <input type="submit">
     </form>
