fixed backend php file in customerbackend

--- a/customerFrontend.html
+++ b/customerFrontend.html
@@ -9,9 +9,9 @@
 </head>
   <body>
     <h1>Welcome to Tim's Produce Shop</h1>
-    <form onsubmit="validInput()" action="customerBackend.php" method="get">
-      Username<input type="email" id="username" required><br>
-      Password<input type="text" id="password" required><br><br>
+    <form onsubmit="validInput()" action="customerBackend.php" method="post">
+      Username<input type="email" name="username" id="username" required><br>
+      Password<input type="text" name="password" id="password" required><br><br>
       Pick your produce<br>
       <input type="number" name="item1" min= "0" required>Bananas ($3.00 bunch)<br>
       <input type="number" name="item2" min= "0" required>Apples ($2.00 per apple)<br>
