updated index.html for all of lab 4

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@ notice the exciting sprucing of KU colors red and blue</p>
 <br>
 <b><a href="multiply.php"> Lab 04 Exercise 1 </a>
 <br>
-
+<b><a href="quiz.html"> Lab 04 Exercise 2 </a>
+<br>
+<b><a href="customerFrontend.html">  Lab 04 Exercise 3 </a>
 
 
 
