Almost finished lab#5 in 448)
;

--- a/DeletePost.html
+++ b/DeletePost.html
@@ -1,4 +1,3 @@
-
 <?php
 $con=mysqli_connect("mysql.eecs.ku.edu","t399f699","eecs448","t399f699");
 // Check connection
@@ -7,7 +6,7 @@ if (mysqli_connect_errno())
 echo "Failed to connect to MySQL: " . mysqli_connect_error();
 }
 
-$result = mysqli_query($con,"SELECT * FROM Users");
+$result = mysqli_query($con,"SELECT * FROM Posts");
 
 echo "<table border='1'>
 <tr>
@@ -18,7 +17,10 @@ echo "<table border='1'>
 while($row = mysqli_fetch_array($result))
 {
 echo "<tr>";
-echo "<td>" . $row['user_id'] . "</td>";
+echo "<td>" . $row['author_id'] . "</td>";
+echo "<td>" . $row['content'] . "</td>";
+echo "<td>" . $row['post_id'] . "</td>";
+echo "<td>" . delete . "</td>";
 
 echo "</tr>";
 }
