--- a/ViewUserPosts.html
+++ b/ViewUserPosts.html
@@ -1,5 +1,13 @@
+<!DOCTYPE html>
 <html>
-<head></head>
 <body>
-  <ul>
-    <?php <select>
+
+<select>
+  <option value="user1">user1</option>
+  <option value="user2">user2</option>
+  <option value="user3">user3</option>
+  <option value="user4">user4</option>
+</select>
+
+</body>
+</html>
