--- a/AdminHome.html
+++ b/AdminHome.html
@@ -16,6 +16,10 @@ Where anything is possible
 <br>
 notice the exciting sprucing of KU colors red and blue</p>
 <br>
+<b><a href="CreateUser.html"> Create a new user </a>
+	<br>
+	<b><a href="CreatePosts.html"> Create a post with valid username </a>
+<br>
 <b><a href="ViewUsers.php"> View all the UserNames </a>
 <br>
 <b><a href="ViewUserPosts.html"> View Users Posts </a>
