finished working lab 5

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	
+
 	<link href="indexstyle.css"
 	      rel="stylesheet"
 	      type="text/css"/>
@@ -29,6 +29,8 @@ notice the exciting sprucing of KU colors red and blue</p>
 <b><a href="quiz.html"> Lab 04 Exercise 2 </a>
 <br>
 <b><a href="customerFrontend.html">  Lab 04 Exercise 3 </a>
+<br>
+<b><a href="AdminHome.html"> Lab 05 MySql </a>
 
 
 
